@@ -1,5 +1,10 @@
 2004-06-22  Richard Hult  <richard@imendio.com>
 
+	* src/planner-window.c: Fix bug #140335, save UI state, based on
+	patch from Chris Ladd.
+
+2004-06-22  Richard Hult  <richard@imendio.com>
+
 	* configure.in:
 	* data/images/Makefile.am:
 	* data/images/gnome-application-x-mrproject.png:
